--- a/custom_components/mcz/manifest.json
+++ b/custom_components/mcz/manifest.json
@@ -5,5 +5,6 @@
   "documentation": "https://github.com/ton-nom-utilisateur/mcz-stove-homeassistant",
   "requirements": [],
   "dependencies": [],
-  "codeowners": [""]
+  "codeowners": [""],
+  "config_flow": true
 }
